fixed spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,7 +17,8 @@
 /* HERO SECTION  */
 
 .hero-section {
-    min-height: calc(100vh - 120px);
+    /* min-height: calc(100vh - 120px); */
+    padding-top: 50px;
 }
 
 
