--- a/src/assets/css/media-query.css
+++ b/src/assets/css/media-query.css
@@ -19,7 +19,7 @@
 .hero-section {
 flex-direction: column;
 gap: 30px;
-margin-top: 40px;
+padding-top: 20px;
 }
 
 .hero-section .hot-tag {
